--- a/views/index.html
+++ b/views/index.html
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
   <link rel="stylesheet" href="main-mb.css" />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"/>
 </head>
+
 
 <body>
   <!--header-->
@@ -173,7 +174,6 @@
                     <li>Built a masonry-ordered photo grid web page, <a class="emphasis_intro in-para-link" href="https://elsie-c.github.io/brickade">brickade</a>, to display photo of my favorite moments.</li>
                     <br>
                     <li>Collaboration Work: Frontend for data repository, <a class="emphasis_intro in-para-link" href="#">RadQA Solutions Data Repository</a>, for storing MRI database and troubleshooting the performance of local MRI scanners.</li><br>
-                    <!-- <li><a class="emphasis_intro in-para-link" href="#">MEDICALY</a></li> -->
                   </ul>
                 </div>
                 <div id="biomems" class="tabcontent">
@@ -235,7 +235,7 @@
             </div>
         </div>
       </section>
-      <section class="portfolio" id="portfolio">
+      <section id="portfolio">
         <div class="container">
           <div class="section-heading">
             <h1>Portfolio</h1>
@@ -284,8 +284,6 @@
                 </div>
                 <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <p class="back-para">Under Construction
-                    </p><br>
                     <div class="listoftools">[ Javascript, HTML, CSS, React, Appbase.io, Material UI ]</div>
                     <button class="flip-box-button"><a href="https://github.com/elsie-c/medicaly-v1.0">Learn More</a></button>
                   </div>
@@ -319,8 +317,7 @@
                 </div>
                 <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <p class="back-para">
-                    </p><br>
+                    
                     <div class="listoftools">[ Javascript, HTML, CSS, React, NodeJS, AOS.js, Heroku ]</div>
                     <button class="flip-box-button"><a href="https://www.elsiemade.com">Learn More</a></button>
                   </div>
