--- a/views/index.html
+++ b/views/index.html
@@ -24,7 +24,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <button class="resume-button"><a href="./eunbyul-cho-resume.pdf" download="newfilename">Resume</a></button>
+    <button class="resume-button"><a href="/Elsie-Cho.pdf" download="newfilename">Resume</a></button>
   </header>
 
   <!--maincontent-->
